--- a/packages/webapp/index.html
+++ b/packages/webapp/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="AI Chat with Enterprise Data" />
+    <meta name="description" content="FODMAP Food Rating Assistant - Get quick ratings for grocery shopping" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>AI Chat with Enterprise Data</title>
+    <title>FODMAP Food Helper</title>
     <style>
       :root {
-        --azc-primary: #07c;
-        --azc-bg: #eee;
+        --azc-primary: #22c55e;
+        --azc-bg: #f0fdf4;
         --azc-border-radius: 16px;
       }
       html,
@@ -25,7 +25,7 @@
       nav {
         display: flex;
         flex: 0 1 auto;
-        background: #333;
+        background: #166534;
         color: #fff;
         padding: 16px;
         font-family:
@@ -59,7 +59,7 @@
   <body>
     <nav>
       <img src="/favicon.png" alt="" />
-      AI Chat with Enterprise Data
+      🥬 FODMAP Food Helper
     </nav>
     <main>
       <azc-history id="chatHistory"></azc-history>
