--- a/packages/webapp/index.html
+++ b/packages/webapp/index.html
@@ -54,6 +54,25 @@
         max-width: 1024px;
         margin: 0 auto;
       }
+      footer {
+        background: #f8fafc;
+        border-top: 1px solid #e2e8f0;
+        padding: 16px;
+        text-align: center;
+        font-size: 0.875rem;
+        color: #64748b;
+        font-family:
+          'Segoe UI',
+          -apple-system,
+          BlinkMacSystemFont,
+          Roboto,
+          'Helvetica Neue',
+          sans-serif;
+      }
+      footer p {
+        margin: 0;
+        line-height: 1.5;
+      }
     </style>
   </head>
   <body>
@@ -65,6 +84,12 @@
       <azc-history id="chatHistory"></azc-history>
       <azc-chat id="chat"></azc-chat>
     </main>
+    <footer>
+      <p>
+        This is a prototype application. The information provided is for educational purposes only.
+        It is not intended as medical advice, diagnosis, or treatment recommendation.
+      </p>
+    </footer>
     <script type="module" src="/src/index.ts"></script>
     <script>
       // Generate a unique ID and store it in local storage
